--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="cn" lang="cn">
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -59,29 +59,27 @@
 
 <h2>Welcome to CodeIgniter</h2>
 
-<p>CodeIgniter is an Application Development Framework - a toolkit - for people who build web sites using PHP.
-Its goal is to enable you to develop projects much faster than you could if you were writing code
-from scratch, by providing a rich set of libraries for commonly needed tasks, as well as a simple interface and
-logical structure to access these libraries. CodeIgniter lets you creatively focus on your project by
-minimizing the amount of code needed for a given task.</p>
-
-
-<h2>Who is CodeIgniter For?</h2>
-
-<p>CodeIgniter is right for you if:</p>
-
+<p>CodeIgniter 是開發 PHP 應用程式的 framework 及工具組。提供簡易的介面和邏輯結構來使用豐富的函式庫，其目的是讓你可以加
+快開發速度。使用 CodeIgniter 只需要寫少少的程式，讓創造力可專注在專案開發。</p>
+ 
+<h2>CodeIgniter 是為誰量身訂作的呢？</h2>
+ 
+<p>CodeIgniter 為你而存在，假如 ..</p>
+ 
 <ul>
-<li>You want a framework with a small footprint.</li>
-<li>You need exceptional performance.</li>
-<li>You need broad compatibility with standard hosting accounts that run a variety of PHP versions and configurations.</li>
-<li>You want a framework that requires nearly zero configuration.</li>
-<li>You want a framework that does not require you to use the command line.</li>
-<li>You want a framework that does not require you to adhere to restrictive coding rules.</li>
-<li>You are not interested in large-scale monolithic libraries like PEAR.</li>
-<li>You do not want to be forced to learn a templating language (although a template parser is optionally available if you desire one).</li>
-<li>You eschew complexity, favoring simple solutions.</li>
-<li>You need clear, thorough documentation.</li>
+<li>你想要小巧的 framework 。</li>
+<li>你需要卓越的效能。</li>
+<li>你需要廣泛的支援，於各 PHP 版本的主機皆運作良好。</li>
+<li>你需要幾乎不需額外設定的 framework。</li>
+<li>你想要不需使用 command line 的 framework。 </li>
+<li>你想要不強制要求 coding rules 的 framework。</li>
+<li>你對 PEAR 那樣包山包海的程式庫不感興趣。</li>
+<li>你不想被迫學習樣板語言(若有需要的話，仍有樣板解析器可隨侍在後)。</li>
+<li>你避免複雜，期待簡單。</li>
+<li>你需要清楚、完整的文件說明。</li>
 </ul>
+
+
 
 
 </div>
