updating class & helper reference

--- a/general/creating_libraries.html
+++ b/general/creating_libraries.html
@@ -58,7 +58,7 @@ Creating Libraries
 <h1>Creating Libraries</h1>
 
 <p>When we use the term "Libraries" we are normally referring to the classes that are located in the <kbd>libraries</kbd>
-directory and described in the Class Reference of this user guide.  In this case, however, we will instead describe how you can create
+directory and described in the 類別參考 of this user guide.  In this case, however, we will instead describe how you can create
 your own libraries within your <dfn>application/libraries</dfn> directory in order to maintain separation between your local resources
 and the global framework resources.</p>
 
