--- a/libraries/form_validation.html
+++ b/libraries/form_validation.html
@@ -86,7 +86,7 @@ have left the old class in the library so applications currently using it will n
 <li><a href="#rulereference">Rule Reference</a></li>
 <li><a href="#preppingreference">Prepping Reference</a></li>
 <li><a href="#functionreference">Function Reference</a></li>
-<li><a href="#helperreference">Helper Reference</a></li>
+<li><a href="#helperreference">補助函數參考</a></li>
 
 </ul>
 
@@ -1134,7 +1134,7 @@ group via the function, as described in: <a href="#savingtoconfig">Saving Groups
 <p>&nbsp;</p>
 
 <a name="helperreference"></a>
-<h1>Helper Reference</h1>
+<h1>補助函數參考</h1>
 
 <p>The following helper functions are available for use in the view files containing your forms.  Note that these are procedural functions, so they
 <strong>do not</strong> require you to prepend them with $this->form_validation.</p>
