--- a/overview/getting_started.html
+++ b/overview/getting_started.html
@@ -67,8 +67,8 @@ all the topics in the <strong>Introduction</strong> section of the Table of Cont
 <p>Next, read each of the <strong>General Topics</strong> pages in order.
 Each topic builds on the previous one, and includes code examples that you are encouraged to try.</p>
 
-<p>Once you understand the basics you'll be ready to explore the <strong>Class Reference</strong> and
-<strong>Helper Reference</strong> pages to learn to utilize the native libraries and helper files.</p>
+<p>Once you understand the basics you'll be ready to explore the <strong>類別參考</strong> and
+<strong>補助函數參考</strong> pages to learn to utilize the native libraries and helper files.</p>
 
 <p>Feel free to take advantage of our <a href="http://codeigniter.com/forums/">Community Forums</a>
 if you have questions or problems, and
