修改 table toc.html

--- a/toc.html
+++ b/toc.html
@@ -122,8 +122,8 @@ Table of Contents
 </td>
 <td valign="top" width="25%">
 
-		
-<h3>Class Reference</h3>
+
+<h3>類別參考</h3>
 <ul>
 <li><a href="./libraries/benchmark.html">Benchmarking Class</a></li>
 <li><a href="./libraries/calendar.html">Calendaring Class</a></li>
@@ -156,7 +156,7 @@ Table of Contents
 </td>
 <td valign="top" width="25%">
 
-<h3>Helper Reference</h3>
+<h3>補助函數參考</h3>
 <ul>
 <li><a href="./helpers/array_helper.html">Array Helper</a></li>
 <li><a href="./helpers/compatibility_helper.html">Compatibility Helper</a></li>
