--- a/toc.html
+++ b/toc.html
@@ -155,9 +155,9 @@
 </td>
 <td valign="top" width="25%">
 
-<h3>補助函數參考</h3>
+<h3>補助函式參考</h3>
 <ul>
-<li><a href="./helpers/array_helper.html">Array Helper</a></li>
+<li><a href="./helpers/array_helper.html">陣列函式參考</a></li>
 <li><a href="./helpers/compatibility_helper.html">Compatibility Helper</a></li>
 <li><a href="./helpers/cookie_helper.html">Cookie Helper</a></li>
 <li><a href="./helpers/date_helper.html">Date Helper</a></li>
