--- a/general/controllers.html
+++ b/general/controllers.html
@@ -359,7 +359,7 @@ Constructors can't return a value, but they can do some default work.</p>
 
 <p>Since your controller classes will extend the main application controller you
 must be careful not to name your functions identically to the ones used by that class, otherwise your local functions
-will override them. See <a href="reserved_names.html">Reserved Names</a> for a full list.</p>
+will override them. See <a href="reserved_names.html">保留名稱</a> for a full list.</p>
 
 <h2>That's it!</h2>
 
@@ -377,7 +377,7 @@ will override them. See <a href="reserved_names.html">Reserved Names</a> for a f
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">頁首</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
-下個主題:&nbsp;&nbsp;<a href="reserved_names.html">Reserved Names</a></p>
+下個主題:&nbsp;&nbsp;<a href="reserved_names.html">保留名稱</a></p>
 <p><a href="http://codeigniter.com">CodeIgniter</a> &nbsp;&middot;&nbsp; Copyright &#169; 2006-2008 &nbsp;&middot;&nbsp; <a href="http://ellislab.com/">Ellislab, Inc.</a></p>
 </div>
 
