--- a/general/reserved_names.html
+++ b/general/reserved_names.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Reserved Names : CodeIgniter 使用手冊</title>
+<title>保留名稱 : CodeIgniter 使用手冊</title>
 
 <style type='text/css' media='all'>@import url('../userguide.css');</style>
 <link rel='stylesheet' type='text/css' media='all' href='../userguide.css' />
@@ -55,7 +55,7 @@ Controllers
 <!-- START CONTENT -->
 <div id="content">
 
-<h1>Reserved Names</h1>
+<h1>保留名稱</h1>
 
 <p>In order to help out, CodeIgniter uses a series of functions and names in its operation. Because of this, some names cannot be used by a developer. Following is a list of reserved names that cannot be used.</p>
 <h3>Controller names</h3>
