--- a/installation/troubleshooting.html
+++ b/installation/troubleshooting.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Troubleshooting : CodeIgniter 使用手冊</title>
+<title>除錯 : CodeIgniter 使用手冊</title>
 
 <style type='text/css' media='all'>@import url('../userguide.css');</style>
 <link rel='stylesheet' type='text/css' media='all' href='../userguide.css' />
@@ -55,7 +55,7 @@ Trouble Shooting
 <!-- START CONTENT -->
 <div id="content">
 
-<h1>Troubleshooting</h1>
+<h1>除錯</h1>
 
 <p>If you find that no matter what you put in your URL only your default page is loading, it might be that your server
 does not support the PATH_INFO variable needed to serve search-engine friendly URLs.
