--- a/overview/at_a_glance.html
+++ b/overview/at_a_glance.html
@@ -159,7 +159,7 @@ we are committed to doing it. Our source code is extremely clean and well commen
 
 <div id="footer">
 <p>
-上個主題:&nbsp;&nbsp;<a href="getting_started.html">Getting Started</a>
+上個主題:&nbsp;&nbsp;<a href="getting_started.html">開始使用</a>
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">頁首</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
