--- a/general/views.html
+++ b/general/views.html
@@ -261,7 +261,7 @@ to your browser.  Remember to assign it to a variable if you want the data retur
 
 <div id="footer">
 <p>
-上個主題:&nbsp;&nbsp;<a href="reserved_names.html">Reserved Names</a>
+上個主題:&nbsp;&nbsp;<a href="reserved_names.html">保留名稱</a>
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">頁首</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
