--- a/overview/getting_started.html
+++ b/overview/getting_started.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Getting Started With CodeIgniter : CodeIgniter 使用手冊</title>
+<title>開始使用 With CodeIgniter : CodeIgniter 使用手冊</title>
 
 <style type='text/css' media='all'>@import url('../userguide.css');</style>
 <link rel='stylesheet' type='text/css' media='all' href='../userguide.css' />
@@ -42,7 +42,7 @@
 <td id="breadcrumb">
 <a href="http://codeigniter.com/">CodeIgniter 首頁</a> &nbsp;&#8250;&nbsp;
 <a href="../index.html">使用手冊首頁</a> &nbsp;&#8250;&nbsp;
-Getting Started
+開始使用
 </td>
 <td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="codeigniter.com/user_guide/" />搜尋使用手冊&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
 </tr>
@@ -55,7 +55,7 @@ Getting Started
 <!-- START CONTENT -->
 <div id="content">
 
-<h1>Getting Started With CodeIgniter</h1>
+<h1>開始使用 With CodeIgniter</h1>
 
 <p>Any software application requires some effort to learn.  We've done our best to minimize the learning
 curve while making the process as enjoyable as possible.
@@ -83,7 +83,7 @@ our <a href="http://codeigniter.com/wiki/">Wiki</a> to see code examples posted 
 <p>
 <a href="#top">頁首</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
-下個主題:&nbsp;&nbsp;<a href="at_a_glance.html">CodeIgniter At a Glance</a>
+下個主題:&nbsp;&nbsp;<a href="at_a_glance.html">CodeIgniter 匆匆一瞥</a>
 </p>
 <p><a href="http://codeigniter.com">CodeIgniter</a> &nbsp;&middot;&nbsp; Copyright &#169; 2006-2008 &nbsp;&middot;&nbsp; <a href="http://ellislab.com/">Ellislab, Inc.</a></p>
 </div>
