--- a/changelog.html
+++ b/changelog.html
@@ -367,7 +367,7 @@ SVN Revision: 1155</p>
 			<li>Removed &quot;scripts&quot; from the auto-load search path. Scripts were deprecated 
 				in Version 1.4.1 (September 21, 2006). If you still need to use them for legacy reasons, they must now be manually loaded in each Controller.</li>
 			<li>Added a <a href="general/reserved_names.html">保留名稱</a> page to the userguide, and migrated reserved controller names into it.</li>
-			<li>Added a <a href="general/common_functions.html">Common Functions</a> page to the userguide for globally available functions.</li>
+			<li>Added a <a href="general/common_functions.html">通用函數(Common Functions)</a> page to the userguide for globally available functions.</li>
 			<li>Improved security and performance of xss_clean().</li>
 		</ul>
 	</li>
@@ -1007,11 +1007,11 @@ all controller methods are prefixed with <dfn>_ci</dfn> to avoid controller coll
 
 <div id="footer">
 <p>
-上個主題:&nbsp;&nbsp;<a href="license.html">License Agreement</a>
+上個主題:&nbsp;&nbsp;<a href="license.html">許可協議</a>
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">頁首</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
-下個主題:&nbsp;&nbsp;<a href="./general/credits.html">Credits</a>
+下個主題:&nbsp;&nbsp;<a href="./general/credits.html">所有權</a>
 </p>
 <p><a href="http://codeigniter.com">CodeIgniter</a> &nbsp;&middot;&nbsp; Copyright &#169; 2006-2008 &nbsp;&middot;&nbsp; <a href="http://ellislab.com/">Ellislab, Inc.</a></p>
 </div>
