--- a/database/caching.html
+++ b/database/caching.html
@@ -61,12 +61,12 @@ Database Caching Class
 
 <p>The Database Caching Class permits you to cache your queries as text files for reduced database load.</p>
 
-<p class="important"><strong>Important:</strong>&nbsp; This class is initialized automatically by the database driver
+<p class="important"><strong>非常重要::</strong>&nbsp; This class is initialized automatically by the database driver
 when caching is enabled.  Do NOT load this class manually.<br /><br />
 
 <strong>Also note:</strong>&nbsp; Not all query result functions are available when you use caching. Please read this page carefully.</p>
 
-<h2>Enabling Caching</h2>
+<h2>啟動快取</h2>
 
 <p>Caching is enabled in three steps:</p>
 
