--- a/database/utilities.html
+++ b/database/utilities.html
@@ -78,7 +78,7 @@ Database Utility Class
 
 <h2><a name="init"></a>Initializing the Utility Class</h2>
 
-<p class="important"><strong>Important:</strong>&nbsp; In order to initialize the Utility class, your database driver must
+<p class="important"><strong>非常重要::</strong>&nbsp; In order to initialize the Utility class, your database driver must
 already be running, since the utilities class relies on it.</p>
 
 <p>Load the Utility Class as follows:</p>
@@ -174,7 +174,7 @@ $newline = "\r\n";<br />
 echo $this->dbutil->csv_from_result($query, $delimiter, $newline);
 </code>
 
-<p><strong>Important:</strong>&nbsp; This function will NOT write the CSV file for you.  It simply creates the CSV layout.
+<p><strong>非常重要::</strong>&nbsp; This function will NOT write the CSV file for you.  It simply creates the CSV layout.
 If you need to write the file use the <a href="../helpers/file_helper.html">File Helper</a>.</p>
 
 
@@ -198,7 +198,7 @@ $config = array (<br />
 echo $this->dbutil->xml_from_result($query, $config);
 </code>
 
-<p><strong>Important:</strong>&nbsp; This function will NOT write the XML file for you.  It simply creates the XML layout.
+<p><strong>非常重要::</strong>&nbsp; This function will NOT write the XML file for you.  It simply creates the XML layout.
 If you need to write the file use the <a href="../helpers/file_helper.html">File Helper</a>.</p>
 
 
