--- a/doc_style/template.html
+++ b/doc_style/template.html
@@ -53,7 +53,7 @@ Foo Class
 
 <p>Brief description of Foo Class.  If it extends a native CodeIgniter class, please link to the class in the CodeIgniter documents here.</p>
 
-<p class="important"><strong>Important:</strong>&nbsp; This is an important note with <kbd>EMPHASIS</kbd>.</p>
+<p class="important"><strong>非常重要::</strong>&nbsp; This is an important note with <kbd>EMPHASIS</kbd>.</p>
 	
 <p>Features:</p>
 
@@ -115,11 +115,11 @@ Foo Class
 
 <div id="footer">
 <p>
-上個主題:&nbsp;&nbsp;<a href="#">Previous Class</a>
+上個主題:&nbsp;&nbsp;<a href="#">上個類別</a>
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">頁首</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
-下個主題:&nbsp;&nbsp;<a href="#">Next Class</a>
+下個主題:&nbsp;&nbsp;<a href="#">下個類別</a>
 </p>
 <p><a href="http://codeigniter.com">CodeIgniter</a> &nbsp;&middot;&nbsp; Copyright &#169; 2006-2008 &nbsp;&middot;&nbsp; <a href="http://ellislab.com/">Ellislab, Inc.</a></p>
 </div>
