--- a/general/caching.html
+++ b/general/caching.html
@@ -73,7 +73,7 @@ and sent to the requesting user's browser.  If it has expired, it will be delete
 
 <p>注意: The Benchmark tag is not cached so you can still view your page load speed when caching is enabled.</p>
 
-<h2>Enabling Caching</h2>
+<h2>啟動快取</h2>
 
 <p>To enable caching, put the following tag in any of your controller functions:</p>
 
