--- a/general/creating_libraries.html
+++ b/general/creating_libraries.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Creating Libraries : CodeIgniter 使用手冊</title>
+<title>建立自己的程式庫 : CodeIgniter 使用手冊</title>
 
 <style type='text/css' media='all'>@import url('../userguide.css');</style>
 <link rel='stylesheet' type='text/css' media='all' href='../userguide.css' />
@@ -42,7 +42,7 @@
 <td id="breadcrumb">
 <a href="http://codeigniter.com/">CodeIgniter 首頁</a> &nbsp;&#8250;&nbsp;
 <a href="../index.html">使用手冊首頁</a> &nbsp;&#8250;&nbsp;
-Creating Libraries
+建立自己的程式庫
 </td>
 <td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="codeigniter.com/user_guide/" />搜尋使用手冊&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
 </tr>
@@ -55,7 +55,7 @@ Creating Libraries
 <!-- START CONTENT -->
 <div id="content">
 
-<h1>Creating Libraries</h1>
+<h1>建立自己的程式庫</h1>
 
 <p>When we use the term "Libraries" we are normally referring to the classes that are located in the <kbd>libraries</kbd>
 directory and described in the 類別參考 of this user guide.  In this case, however, we will instead describe how you can create
@@ -285,7 +285,7 @@ the email class all calls will use:</p>
 
 <div id="footer">
 <p>
-上個主題:&nbsp;&nbsp;<a href="libraries.html">Using CodeIgniter Libraries</a>
+上個主題:&nbsp;&nbsp;<a href="libraries.html">使用 CodeIgniter 程式庫</a>
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">頁首</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
