--- a/general/libraries.html
+++ b/general/libraries.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Using CodeIgniter Libraries : CodeIgniter 使用手冊</title>
+<title>使用 CodeIgniter 程式庫 : CodeIgniter 使用手冊</title>
 
 <style type='text/css' media='all'>@import url('../userguide.css');</style>
 <link rel='stylesheet' type='text/css' media='all' href='../userguide.css' />
@@ -42,7 +42,7 @@
 <td id="breadcrumb">
 <a href="http://codeigniter.com/">CodeIgniter 首頁</a> &nbsp;&#8250;&nbsp;
 <a href="../index.html">使用手冊首頁</a> &nbsp;&#8250;&nbsp;
-Using CodeIgniter Libraries
+使用 CodeIgniter 程式庫
 </td>
 <td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="codeigniter.com/user_guide/" />搜尋使用手冊&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
 </tr>
@@ -55,7 +55,7 @@ Using CodeIgniter Libraries
 <!-- START CONTENT -->
 <div id="content">
 
-<h1>Using CodeIgniter Libraries</h1>
+<h1>使用 CodeIgniter 程式庫</h1>
 
 
 <p>All of the available libraries are located in your <dfn>system/libraries</dfn> folder.
@@ -69,7 +69,7 @@ In most cases, to use one of these classes involves initializing it within a <a 
 
 <p>Once initialized you can use it as indicated in the user guide page corresponding to that class.</p>
 
-<h2>Creating Your Own Libraries</h2>
+<h2>建立自己的程式庫</h2>
 
 <p>Please read the section of the user guide that discusses how to <a href="creating_libraries.html">create your own libraries</a></p>
 
@@ -85,7 +85,7 @@ In most cases, to use one of these classes involves initializing it within a <a 
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">頁首</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
-下個主題:&nbsp;&nbsp;<a href="creating_libraries.html">Creating Libraries</a>
+下個主題:&nbsp;&nbsp;<a href="creating_libraries.html">建立自己的程式庫</a>
 </p>
 <p><a href="http://codeigniter.com">CodeIgniter</a> &nbsp;&middot;&nbsp; Copyright &#169; 2006-2008 &nbsp;&middot;&nbsp; <a href="http://ellislab.com/">Ellislab, Inc.</a></p>
 </div>
