--- a/general/scaffolding.html
+++ b/general/scaffolding.html
@@ -62,7 +62,7 @@ Scaffolding
 <p>CodeIgniter's Scaffolding feature provides a fast and very convenient way to add, edit, or delete information in your database
 during development.</p>
 
-<p class="important"><strong>Very Important:</strong>  Scaffolding is intended for development use only.  It provides very little
+<p class="important"><strong>Very 非常重要::</strong>  Scaffolding is intended for development use only.  It provides very little
 security other than a "secret" word, so anyone who has access to your CodeIgniter site can potentially edit or delete your information.
 If you use scaffolding make sure you disable it immediately after you are through using it.  DO NOT leave it enabled on a live site.
 And please, set a secret word before you use it.</p>
@@ -136,7 +136,7 @@ database functions.</p>
 
 <div id="footer">
 <p>
-上個主題:&nbsp;&nbsp;<a href="common_functions.html">Common Functions</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
+上個主題:&nbsp;&nbsp;<a href="common_functions.html">通用函數(通用函數(Common Functions))</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">頁首</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 下個主題:&nbsp;&nbsp;<a href="routing.html">URI Routing</a></p>
