--- a/general/urls.html
+++ b/general/urls.html
@@ -118,7 +118,7 @@ by CodeIgniter.  For example, if a URL is this:</p>
 
 <code>index.php?c=products&amp;m=view&amp;id=345</code>
 
-<p>CodeIgniter optionally supports this capability, which can be enabled in your <dfn>application/config.php</dfn> file. If you
+<p>CodeIgniter optionally supports this 、相容性, which can be enabled in your <dfn>application/config.php</dfn> file. If you
 open your config file you'll see these items:</p>
 
 <code>$config['enable_query_strings'] = FALSE;<br />
