--- a/helpers/smiley_helper.html
+++ b/helpers/smiley_helper.html
@@ -82,7 +82,7 @@ Your users can click a desired smiley and with the help of some JavaScript it wi
 <p>Here is an example demonstrating how you might create a set of clickable smileys next to a form field. This example
 requires that you first download and install the smiley images, then create a controller and the View as described.</p>
 
-<p class="important"><strong>Important:</strong> Before you begin, please <a href="http://codeigniter.com/download_files/smileys.zip">download the smiley images</a> and put them in
+<p class="important"><strong>非常重要::</strong> Before you begin, please <a href="http://codeigniter.com/download_files/smileys.zip">download the smiley images</a> and put them in
 a publicly accessible place on your server.  This helper also assumes you have the smiley replacement array located at
 <dfn>application/config/smileys.php</dfn></p>
 
@@ -91,7 +91,7 @@ a publicly accessible place on your server.  This helper also assumes you have t
 
 <p>In your <dfn>application/controllers/</dfn> folder, create a file called <kbd>smileys.php</kbd> and place the code below in it.</p>
 
-<p><strong>Important:</strong> Change the URL in the <dfn>get_clickable_smileys()</dfn> function below so that it points to 
+<p><strong>非常重要::</strong> Change the URL in the <dfn>get_clickable_smileys()</dfn> function below so that it points to 
 your <dfn>smiley</dfn> folder.</p>
 
 <p>You'll notice that in addition to the smiley helper we are using the <a href="../libraries/table.html">Table Class</a>.</p>
