--- a/installation/upgrading.html
+++ b/installation/upgrading.html
@@ -57,7 +57,7 @@
 
 <h1>更新</h1>
 
-<p>Please read the upgrade notes corresponding to the version you are upgrading from.</p>
+<p>請依您的版本詳閱更新注意事項。.</p>
 
 <ul>
 <li><a href="upgrade_171.html">更新 1.7.0 到 1.7.1</a></li>
