--- a/overview/features.html
+++ b/overview/features.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>CodeIgniter Features : CodeIgniter 使用手冊</title>
+<title>CodeIgniter 的功能 : CodeIgniter 使用手冊</title>
 
 <style type='text/css' media='all'>@import url('../userguide.css');</style>
 <link rel='stylesheet' type='text/css' media='all' href='../userguide.css' />
@@ -56,7 +56,7 @@ Features
 <div id="content">
 
 
-<h1>CodeIgniter Features</h1>
+<h1>CodeIgniter 的功能</h1>
 
 <p>Features in and of themselves are a very poor way to judge an application since they tell you nothing
 about the user experience, or how intuitively or intelligently it is designed.  Features
@@ -111,7 +111,7 @@ CodeIgniter is child's play so we encourage you to do just that.  In the mean ti
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">頁首</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
-下個主題:&nbsp;&nbsp;<a href="appflow.html">Application Flow Chart</a>
+下個主題:&nbsp;&nbsp;<a href="appflow.html">程式流程圖</a>
 </p>
 <p><a href="http://codeigniter.com">CodeIgniter</a> &nbsp;&middot;&nbsp; Copyright &#169; 2006-2008 &nbsp;&middot;&nbsp; <a href="http://ellislab.com/">Ellislab, Inc.</a></p>
 </div>
