--- a/overview/goals.html
+++ b/overview/goals.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Design and Architectural Goals : CodeIgniter 使用手冊</title>
+<title>設計與架構目標 : CodeIgniter 使用手冊</title>
 
 <style type='text/css' media='all'>@import url('../userguide.css');</style>
 <link rel='stylesheet' type='text/css' media='all' href='../userguide.css' />
@@ -57,9 +57,9 @@ Goals
 
 
 
-<h2>Design and Architectural Goals</h2>
+<h2>設計與架構目標</h2>
 
-<p>Our goal for CodeIgniter is <dfn>maximum performance, capability, and flexibility in the smallest, lightest possible package</dfn>.</p>
+<p>CodeIgniter 的目標是<dfn>用最小、最輕盈的套件，呈獻最大的效能、相容以及彈性</dfn>。</p>
 
 <p>To meet this goal we are committed to benchmarking, re-factoring, and simplifying at every step of the development process,
 rejecting anything that doesn't further the stated objective.</p>
