--- a/overview/mvc.html
+++ b/overview/mvc.html
@@ -87,11 +87,11 @@ enables you to incorporate your own existing scripts, or even develop core libra
 
 <div id="footer">
 <p>
-上個主題:&nbsp;&nbsp;<a href="appflow.html">Application Flow Chart</a>
+上個主題:&nbsp;&nbsp;<a href="appflow.html">程式流程圖</a>
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">頁首</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
-下個主題:&nbsp;&nbsp;<a href="goals.html">Architectural Goals</a>
+下個主題:&nbsp;&nbsp;<a href="goals.html">架構目標</a>
 </p>
 <p><a href="http://codeigniter.com">CodeIgniter</a> &nbsp;&middot;&nbsp; Copyright &#169; 2006-2008 &nbsp;&middot;&nbsp; <a href="http://ellislab.com/">Ellislab, Inc.</a></p>
 </div>
