--- a/general/core_classes.html
+++ b/general/core_classes.html
@@ -172,7 +172,7 @@ This allows you to substantially alter the CodeIgniter core.</p>
 
 <div id="footer">
 <p>
-上個主題:&nbsp;&nbsp;<a href="creating_libraries.html">Creating Your Own Libraries</a>
+上個主題:&nbsp;&nbsp;<a href="creating_libraries.html">建立自己的程式庫</a>
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">頁首</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
