--- a/general/hooks.html
+++ b/general/hooks.html
@@ -158,7 +158,7 @@ $hook['pre_controller']<kbd>[]</kbd> = array(<br />
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">頁首</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
-下個主題:&nbsp;&nbsp;<a href="autoloader.html">Auto-loading Resources</a>
+下個主題:&nbsp;&nbsp;<a href="autoloader.html">自動載入資源</a>
 </p>
 <p><a href="http://codeigniter.com">CodeIgniter</a> &nbsp;&middot;&nbsp; Copyright &#169; 2006-2008 &nbsp;&middot;&nbsp; <a href="http://ellislab.com/">Ellislab, Inc.</a></p>
 </div>
