--- a/installation/index.html
+++ b/installation/index.html
@@ -81,7 +81,7 @@
 
 <div id="footer">
 <p>
-下個主題:&nbsp;&nbsp;<a href="../general/credits.html">貢獻</a>
+下個主題:&nbsp;&nbsp;<a href="../general/credits.html">所有權</a>
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">頁首</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
