--- a/license.html
+++ b/license.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>CodeIgniter License Agreement : CodeIgniter 使用手冊</title>
+<title>CodeIgniter 許可協議 : CodeIgniter 使用手冊</title>
 
 <style type='text/css' media='all'>@import url('userguide.css');</style>
 <link rel='stylesheet' type='text/css' media='all' href='userguide.css' />
@@ -43,7 +43,7 @@
 <td id="breadcrumb">
 <a href="http://codeigniter.com/">CodeIgniter 首頁</a> &nbsp;&#8250;&nbsp;
 <a href="index.html">使用手冊首頁</a> &nbsp;&#8250;&nbsp;
-License Agreement
+許可協議
 </td>
 <td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="codeigniter.com/user_guide/" />搜尋使用手冊&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
 </tr>
@@ -58,14 +58,14 @@ License Agreement
 <!-- START CONTENT -->
 <div id="content">
 
-<h1>CodeIgniter License Agreement</h1>
+<h1>CodeIgniter 許可協議</h1>
 
 <p>Copyright (c) 2008, EllisLab, Inc.<br />
 All rights reserved.</p>
 
 <p>This license is a legal agreement between you and EllisLab Inc. for the use of CodeIgniter Software (the "Software").  By obtaining the Software you agree to comply with the terms and conditions of this license.</p>
 
-<h2>Permitted Use</h2>
+<h2>允許使用</h2>
 <p>You are permitted to use, copy, modify, and distribute the Software and its documentation, with or without modification, for any purpose, provided that the following conditions are met:</p>
 
 <ol>
@@ -77,7 +77,7 @@ All rights reserved.</p>
 <li>Products derived from the Software may not be called "CodeIgniter", nor may "CodeIgniter" appear in their name, without prior written permission from EllisLab, Inc.</li>
 </ol>
 
-<h2>Indemnity</h2>
+<h2>損害賠償</h2>
 <p>You agree to indemnify and hold harmless the authors of the Software and any contributors for any direct, indirect, incidental, or consequential third-party claims, actions or suits, as well as any related expenses, liabilities, damages, settlements or fees arising from your use or misuse of the Software, or a violation of any terms of this license.</p>
 
 <h2>Disclaimer of Warranty</h2>
@@ -94,7 +94,7 @@ All rights reserved.</p>
 
 <div id="footer">
 <p>
-上個主題:&nbsp;&nbsp;<a href="general/requirements.html">Server Requirements</a>
+上個主題:&nbsp;&nbsp;<a href="general/requirements.html">伺服器需求</a>
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">頁首</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
