--- a/overview/getting_started.html
+++ b/overview/getting_started.html
@@ -70,7 +70,7 @@ Each topic builds on the previous one, and includes code examples that you are e
 <p>Once you understand the basics you'll be ready to explore the <strong>類別參考</strong> and
 <strong>補助函數參考</strong> pages to learn to utilize the native libraries and helper files.</p>
 
-<p>Feel free to take advantage of our <a href="http://codeigniter.com/forums/">Community Forums</a>
+<p>Feel free to take advantage of our <a href="http://codeigniter.com/forums/">社群論壇</a>
 if you have questions or problems, and
 our <a href="http://codeigniter.com/wiki/">Wiki</a> to see code examples posted by other users.</p>
 
