--- a/overview/index.html
+++ b/overview/index.html
@@ -60,11 +60,11 @@ Introduction
 <p>The following pages describe the broad concepts behind CodeIgniter:</p>
 
 	<ul>
-		<li><a href="at_a_glance.html">CodeIgniter at a Glance</a></li>
+		<li><a href="at_a_glance.html">CodeIgniter 匆匆一瞥</a></li>
 		<li><a href="features.html">Supported Features</a></li>
-		<li><a href="appflow.html">Application Flow Chart</a></li>
+		<li><a href="appflow.html">程式流程圖</a></li>
 		<li><a href="mvc.html">Introduction to the 模型-檢視-控制器</a></li>
-		<li><a href="goals.html">Design and Architectural Goals</a></li>
+		<li><a href="goals.html">設計與架構目標</a></li>
 		<li><a href="package.html">Package Description</a></li>
 	</ul>
 	
