--- a/toc.html
+++ b/toc.html
@@ -67,7 +67,7 @@
 	<li><a href="./general/requirements.html">伺服器需求</a></li>
 	<li><a href="license.html">許可協議</a></li>
 	<li><a href="changelog.html">版本紀錄</a></li>
-	<li><a href="./general/credits.html">貢獻</a></li>
+	<li><a href="./general/credits.html">所有權</a></li>
 </ul> 	
 
 <h3>安裝</h3>
@@ -101,12 +101,12 @@
 	<li><a href="./general/models.html">Models</a></li>
 	<li><a href="./general/helpers.html">Helpers</a></li>
 	<li><a href="./general/plugins.html">Plugins</a></li>
-	<li><a href="./general/libraries.html">Using CodeIgniter Libraries</a></li>
-	<li><a href="./general/creating_libraries.html">Creating Your Own Libraries</a></li>
+	<li><a href="./general/libraries.html">使用 CodeIgniter 程式庫</a></li>
+	<li><a href="./general/creating_libraries.html">建立自己的程式庫</a></li>
 	<li><a href="./general/core_classes.html">Creating Core Classes</a></li>
 	<li><a href="./general/hooks.html">Hooks - Extending the Core</a></li>
 	<li><a href="./general/autoloader.html">Auto-loading Resources</a></li>
-	<li><a href="general/common_functions.html">Common Functions</a></li>
+	<li><a href="general/common_functions.html">通用函數</a></li>
 	<li><a href="./general/scaffolding.html">Scaffolding</a></li>
 	<li><a href="./general/routing.html">URI Routing</a></li>
 	<li><a href="./general/errors.html">Error Handling</a></li>
