--- a/general/controllers.html
+++ b/general/controllers.html
@@ -57,7 +57,7 @@ Controllers
 
 <h1>Controllers</h1>
 
-<p>Controllers are the heart of your application, as they determine how HTTP requests should be handled.</p>
+<p>控制器(Controllers)是你的 application 的核心動力，決定了如何處理 HTTP 所發出的要求。</p>
 
 
 <ul>
@@ -67,7 +67,7 @@ Controllers
 <li><a href="#passinguri">Passing URI Segments to Your Functions</a></li>
 <li><a href="#default">Defining a Default Controller</a></li>
 <li><a href="#remapping">Remapping Function Calls</a></li>
-<li><a href="#output">Controlling Output Data</a></li>
+<li><a href="#output">控制輸出資料</a></li>
 <li><a href="#private">Private Functions</a></li>
 <li><a href="#subfolders">Organizing Controllers into Sub-folders</a></li>
 <li><a href="#constructors">Class Constructors</a></li>
