--- a/helpers/cookie_helper.html
+++ b/helpers/cookie_helper.html
@@ -89,7 +89,7 @@ Array Method, and Discrete Parameters:</p>
 set_cookie($cookie);
 </code>
 
-<p><strong>Notes:</strong></p>
+<p><strong>注意:</strong></p>
 
 <p>Only the name and value are required.</p>
 
