--- a/overview/getting_started.html
+++ b/overview/getting_started.html
@@ -57,22 +57,19 @@
 
 <h1>開始使用 With CodeIgniter</h1>
 
-<p>Any software application requires some effort to learn.  We've done our best to minimize the learning
-curve while making the process as enjoyable as possible.
-</p>
+<p>任何的軟體程式都需要花先精力去學習，我們已經盡力的最小化學習曲線，並且進可能讓學習過程可以充滿快樂。</p>
 
-<p>第一步 is to <a href="../installation/index.html">install</a> CodeIgniter, then read
-all the topics in the <strong>Introduction</strong> section of the 目錄.</p>
+<p>第一步，請試者<a href="../installation/index.html">安裝 CodeIgniter</a>，接者閱讀在
+章節目錄裡頭 <strong>簡介</strong> 中的所有主題。</p>
 
-<p>Next, read each of the <strong>一般主題</strong> pages in order.
-Each topic builds on the previous one, and includes code examples that you are encouraged to try.</p>
+<p>第二步，依序閱讀<strong>一般主題</strong>中的每篇文章。每個主題都基於上個主題，並且包含
+程式範例鼓勵你去試試看。</p>
 
-<p>Once you understand the basics you'll be ready to explore the <strong>類別參考</strong> and
-<strong>補助函數參考</strong> pages to learn to utilize the native libraries and helper files.</p>
+<p>一但你了解了這些基礎，你將可以進一步探索 <strong>類別參考</strong> 以及
+<strong>補助函數參考</strong> 的部份，來學習並且使用原生程式庫和補助函數。</p>
 
-<p>Feel free to take advantage of our <a href="http://codeigniter.com/forums/">社群論壇</a>
-if you have questions or problems, and
-our <a href="http://codeigniter.com/wiki/">Wiki</a> to see code examples posted by other users.</p>
+<p>如果有任何的疑問或問題，歡迎來我們的 <a href="http://codeigniter.com/forums/">社群論壇</a> 來看看，
+也可以到 <a href="http://codeigniter.com/wiki/">Wiki</a> 看看其他人分享的一些範例程式。.</p>
 
 
 </div>
